# vm-cpp

./: CMakeLists.txt  README.md
example/: binary.asm  hello  hello.asm
include/: instruct.h  vm.h
src/: generater.py  hello.cpp  translate.cpp  vm.cpp
